# PCB_Traces

./: .editorconfig  CMakeLists.txt  readme.txt
PCB_Traces/: CMakeLists.txt  PCB_Traces.cpp  PCB_Traces.h  PrimitiveTraceTypes.h  SegmentValidator.cpp  SegmentValidator.h  Trace.cpp  Trace.h  TraceController.cpp  TraceController.h  TraceSet.cpp  TraceSet.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PCB_scene.cpp  PCB_scene.h  main.cpp
unitTests/: CMakeLists.txt  SegmentValidator_test.cpp  SegmentValidator_test.h  TraceController_test.cpp  TraceController_test.h  TraceSet_test.cpp  TraceSet_test.h  Trace_test.cpp  Trace_test.h  tests.cpp
